cmake_minimum_required(VERSION 3.13)
set(PICO_NO_PICOTOOL 1)
include(pico_sdk_import.cmake)
project(TuiuiuProject C CXX ASM)
pico_sdk_init()
add_executable(firmware_tui temp_output.cpp)
pico_add_extra_outputs(firmware_tui)
target_link_libraries(firmware_tui pico_stdlib hardware_flash hardware_watchdog)
